# bibtex-lint

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  REUSE.toml  new_version_tag.py  pyproject.toml
src/bibtex/: __init__.py
src/bibtex_lint/: __init__.py
test/: test-biblio.bib
